# backend/src/main/java/ru/skfu/moviecollection/control/dto/AdminStatsDto.java
@@ -3,6 +3,7 @@ package ru.skfu.moviecollection.control.dto;
 public record AdminStatsDto(
         long usersCount,
         long moviesCount,
-        long collectionItemsCount
+        long collectionItemsCount,
+        long openComplaintsCount
 ) {
 }
