# backend/src/main/java/ru/skfu/moviecollection/entity/ComplaintStatus.java
@@ -1,0 +1,8 @@
+package ru.skfu.moviecollection.entity;
+
+public enum ComplaintStatus {
+    NEW,
+    IN_PROGRESS,
+    RESOLVED,
+    REJECTED
+}
